@@ -8,120 +8,85 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
-import static java.util.stream.Stream.*;
+import static java.util.Arrays.stream;
+import static java.util.stream.Stream.concat;
 
-class ComponentInjectionProvider<T> implements ComponentProvider<T> {
-    private final Constructor<T> constructor;
+class ConstructorInjectionProvider<T> implements ContextConfig.ComponentProvider<T> {
+    private Constructor<T> injectConstructor;
+    private List<Field> injectFields;
+    private List<Method> injectMethods;
 
-    private final List<Field> injectFields;
-
-    private final List<Method> injectMethods;
-
-    public ComponentInjectionProvider(Class<T> implementation) {
-        if (Modifier.isAbstract(implementation.getModifiers())) {
-            throw new IllegalComponentException();
-        }
-        this.constructor = getConstructor(implementation);
-        this.injectFields = getInjectFields(implementation);
-        this.injectMethods = getInjectMethods(implementation);
-
-        boolean anyFinal = injectFields.stream().anyMatch(field -> Modifier.isFinal(field.getModifiers()));
-        if (anyFinal) {
-            throw new IllegalComponentException();
-        }
-
-        boolean anyParameterized = injectMethods.stream().anyMatch(method -> method.getTypeParameters().length > 0);
-        if (anyParameterized) {
-            throw new IllegalComponentException();
-        }
-    }
-
-    private List<Method> getInjectMethods(Class<T> implementation) {
-        List<Method> methods = new ArrayList<>();
-        Class<?> current = implementation;
-        while (current != Object.class) {
-            methods.addAll(
-                    Arrays.stream(current.getDeclaredMethods())
-                            .filter(method -> method.isAnnotationPresent(Inject.class))
-                            .filter(method -> methods.stream().noneMatch(item -> method.getName().equals(item.getName())
-                                    && Arrays.equals(item.getParameterTypes(), method.getParameterTypes())))
-                            .filter(method -> Arrays.stream(implementation.getDeclaredMethods())
-                                    .filter(method1 -> !method1.isAnnotationPresent(Inject.class))
-                                    .noneMatch(item -> method.getName().equals(item.getName())
-                                            && Arrays.equals(item.getParameterTypes(), method.getParameterTypes())))
-                            .toList());
-            current = current.getSuperclass();
-        }
-        Collections.reverse(methods);
-
-        return methods;
-    }
-
-    private List<Field> getInjectFields(Class<T> implementation) {
-        List<Field> fields = new ArrayList<>();
-        Class<?> component = implementation;
-        while (component != Object.class) {
-            fields.addAll(Arrays.stream(component.getDeclaredFields())
-                    .filter(field -> field.isAnnotationPresent(Inject.class))
-                    .toList());
-            component = component.getSuperclass();
-        }
-
-        return fields;
-    }
-
-    private static <I> Constructor<I> getConstructor(Class<I> implementation) {
-        List<Constructor<?>> injectConstructors = Arrays.stream(implementation.getConstructors())
-                .filter(constructor -> constructor.isAnnotationPresent(Inject.class)).toList();
-
-        if (injectConstructors.size() > 1) {
-            throw new IllegalComponentException();
-        }
-        return (Constructor<I>) injectConstructors.stream()
-                .findFirst()
-                .orElseGet(() -> {
-                    try {
-                        return implementation.getDeclaredConstructor();
-                    } catch (NoSuchMethodException e) {
-                        throw new IllegalComponentException();
-                    }
-                });
-
+    public ConstructorInjectionProvider(Class<T> component) {
+        this.injectConstructor = getInjectConstructor(component);
+        this.injectFields = getInjectFields(component);
+        this.injectMethods = getInjectMethods(component);
     }
 
     @Override
     public T get(Context context) {
         try {
-            Object[] dependencies = Arrays.stream(constructor.getParameters())
-                    .map(parameter -> context.get(parameter.getType()).get())
+            Object[] dependencies = stream(injectConstructor.getParameters())
+                    .map(p -> context.get(p.getType()).get())
                     .toArray(Object[]::new);
-
-            T t = constructor.newInstance(dependencies);
-            for (Field field : injectFields) {
-                field.set(t, context.get(field.getType()).get());
-            }
-
-            for (Method method : injectMethods) {
-                method.setAccessible(true);
-                method.invoke(t, Arrays.stream(method.getParameterTypes())
-                        .map(type -> context.get(type).get())
+            T instance = injectConstructor.newInstance(dependencies);
+            for (Field field : injectFields)
+                field.set(instance, context.get(field.getType()).get());
+            for (Method method : injectMethods)
+                method.invoke(instance, stream(method.getParameterTypes()).map(t -> context.get(t).get())
                         .toArray(Object[]::new));
-            }
-            return t;
-        } catch (InstantiationException | IllegalAccessException | InvocationTargetException e) {
+            return instance;
+        } catch (InvocationTargetException | InstantiationException | IllegalAccessException e) {
             throw new RuntimeException(e);
         }
     }
 
     @Override
     public List<Class<?>> getDependencies() {
-        Stream<? extends Class<?>> constructorStream = Arrays.stream(constructor.getParameters()).map(Parameter::getType);
-        Stream<? extends Class<?>> classStream = injectFields.stream().map(Field::getType);
-        Stream<Class<?>> stream = injectMethods.stream()
-                .flatMap(method -> Arrays.stream(method.getParameterTypes()));
-        return Stream.concat(stream, concat(constructorStream, classStream))
-                .collect(Collectors.toList());
+        return concat(concat(stream(injectConstructor.getParameters()).map(Parameter::getType),
+                        injectFields.stream().map(Field::getType)),
+                injectMethods.stream().flatMap(m -> stream(m.getParameterTypes()))
+        ).toList();
+    }
+
+    private static <T> List<Method> getInjectMethods(Class<T> component) {
+        List<Method> injectMethods = new ArrayList<>();
+        Class<?> current = component;
+        while(current != Object.class) {
+            injectMethods.addAll(stream(current.getDeclaredMethods()).filter(m -> m.isAnnotationPresent(Inject.class))
+                    .filter(m -> injectMethods.stream().noneMatch(o -> o.getName().equals(m.getName()) &&
+                            Arrays.equals(o.getParameterTypes(), m.getParameterTypes())))
+                    .filter(m -> stream(component.getDeclaredMethods()).filter(m1 -> !m1.isAnnotationPresent(Inject.class))
+                            .noneMatch(o -> o.getName().equals(m.getName()) &&
+                                    Arrays.equals(o.getParameterTypes(), m.getParameterTypes())))
+                    .toList());
+            current = current.getSuperclass();
+        }
+        Collections.reverse(injectMethods);
+        return injectMethods;
+    }
+
+    private static <T> List<Field> getInjectFields(Class<T> component) {
+        List<Field> injectFields = new ArrayList<>();
+        Class<?> current = component;
+        while (current != Object.class) {
+            injectFields.addAll(stream(current.getDeclaredFields()).filter(f -> f.isAnnotationPresent(Inject.class))
+                    .toList());
+            current = current.getSuperclass();
+        }
+        return injectFields;
+    }
+
+    private static <Type> Constructor<Type> getInjectConstructor(Class<Type> implementation) {
+        List<Constructor<?>> injectConstructors = stream(implementation.getConstructors())
+                .filter(c -> c.isAnnotationPresent(Inject.class)).collect(Collectors.toList());
+        if (injectConstructors.size() > 1) throw new IllegalComponentException();
+        return (Constructor<Type>) injectConstructors.stream().findFirst().orElseGet(() -> {
+            try {
+                return implementation.getDeclaredConstructor();
+            } catch (NoSuchMethodException e) {
+                throw new IllegalComponentException();
+            }
+        });
     }
 }
